--- a/Brazil_Forest_Cover_Gain_and_Loss.ipynb
+++ b/Brazil_Forest_Cover_Gain_and_Loss.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMynjtMrUS4c5IvIyyy4vsO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/EltonWolf/GoogleEarthPythonBootcampAPI-/blob/main/Brazil_Forest_Cover_Gain_and_Loss.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -34,15 +18,13 @@
       },
       "outputs": [],
       "source": [
+        "# Import dependencies\n",
         "import ee"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ee.Authenticate()\n",
-        "ee.Initialize()"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,11 +32,10 @@
         "id": "xAF3EQjD30dU",
         "outputId": "987977c6-6cb4-4d6f-a132-ca404d52ee59"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
             "\n",
@@ -66,10 +47,19 @@
             "Successfully saved authorization token.\n"
           ]
         }
+      ],
+      "source": [
+        "ee.Authenticate()\n",
+        "ee.Initialize()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "d7BTUMUX5SOR"
+      },
+      "outputs": [],
       "source": [
         "#Gabon Forest Cover\n",
         "\n",
@@ -78,38 +68,38 @@
         "Brazil = countries.filter(ee.Filter.eq('country_na', 'Brazil'))\n",
         "\n",
         "tree_cover_2022 = ee.Image(\"UMD/hansen/global_forest_change_2022_v1_10\")"
-      ],
-      "metadata": {
-        "id": "d7BTUMUX5SOR"
-      },
-      "execution_count": 18,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "loss = tree_cover_2022.select(['loss'])\n",
-        "gain = tree_cover_2022.select(['gain'])"
-      ],
+      "execution_count": 24,
       "metadata": {
         "id": "qZjfnqoe6ua5"
       },
-      "execution_count": 24,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "loss = tree_cover_2022.select(['loss'])\n",
+        "gain = tree_cover_2022.select(['gain'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import folium"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "oiQQd8jT5eHv"
       },
-      "execution_count": 25,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import folium"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "7BbJFd-55f7p"
+      },
+      "outputs": [],
       "source": [
         "# Define a method for displaying Earth Engine image tiles to folium map.\n",
         "def add_ee_layer(self, ee_image_object, vis_params, name):\n",
@@ -124,31 +114,11 @@
         "\n",
         "# Add EE drawing method to folium.\n",
         "folium.Map.add_ee_layer = add_ee_layer"
-      ],
-      "metadata": {
-        "id": "7BbJFd-55f7p"
-      },
-      "execution_count": 26,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create a folium map object.\n",
-        "my_map = folium.Map(location=[-14.235, -51.9253], zoom_start = 5)\n",
-        "\n",
-        "# Add the layer to the map object.\n",
-        "my_map.add_ee_layer(gain.clip(Brazil).updateMask(gain),{'palette': ['blue']},'Brazil Forest Gain')\n",
-        "my_map.add_ee_layer(loss.clip(Brazil).updateMask(loss),{'palette': ['red']},'Brazil Forest Loss')\n",
-        "\n",
-        "my_map.add_ee_layer(ee.Image().paint(Brazil, 0, 1), {'palette': ['grey']}, 'Brazil')\n",
-        "\n",
-        "# Add a layer control panel to the map.\n",
-        "my_map.add_child(folium.LayerControl())\n",
-        "\n",
-        "# Display the map.\n",
-        "display(my_map)"
-      ],
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -157,14 +127,9 @@
         "id": "t5HUviVd5kyX",
         "outputId": "3cc80645-ae14-44f6-fa24-60c460edb6e5"
       },
-      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<folium.folium.Map at 0x7bb4ba097ee0>"
-            ],
             "text/html": [
               "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
               "&lt;html&gt;\n",
@@ -270,20 +235,56 @@
               "        \n",
               "&lt;/script&gt;\n",
               "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+            ],
+            "text/plain": [
+              "<folium.folium.Map at 0x7bb4ba097ee0>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# Create a folium map object.\n",
+        "my_map = folium.Map(location=[-14.235, -51.9253], zoom_start = 5)\n",
+        "\n",
+        "# Add the layer to the map object.\n",
+        "my_map.add_ee_layer(gain.clip(Brazil).updateMask(gain),{'palette': ['blue']},'Brazil Forest Gain')\n",
+        "my_map.add_ee_layer(loss.clip(Brazil).updateMask(loss),{'palette': ['red']},'Brazil Forest Loss')\n",
+        "\n",
+        "my_map.add_ee_layer(ee.Image().paint(Brazil, 0, 1), {'palette': ['grey']}, 'Brazil')\n",
+        "\n",
+        "# Add a layer control panel to the map.\n",
+        "my_map.add_child(folium.LayerControl())\n",
+        "\n",
+        "# Display the map.\n",
+        "display(my_map)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 12,
       "metadata": {
         "id": "48A2Z3q65xB9"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMynjtMrUS4c5IvIyyy4vsO",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
