Removed USA States (simple project)

--- a/Brazil_Forest_Cover_Gain_and_Loss.ipynb
+++ b/Brazil_Forest_Cover_Gain_and_Loss.ipynb
@@ -268,7 +268,9 @@
         "id": "48A2Z3q65xB9"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "type(my_map)"
+      ]
     }
   ],
   "metadata": {
