Updated MODIS NDVI case

--- a/Calculating_MODISNDVI_Egypt.ipynb
+++ b/Calculating_MODISNDVI_Egypt.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNV2KY+RCF8tcLGr6FZ+C4z",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/EltonWolf/GoogleEarthPythonBootcampAPI-/blob/main/Calculating_MODISNDVI_Egypt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -39,10 +23,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "ee.Authenticate()\n",
-        "ee.Initialize()"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,11 +31,10 @@
         "id": "jY2HjhOJKB9R",
         "outputId": "dbaa2601-a45c-49d6-c56a-a1f82205cd64"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
             "\n",
@@ -66,23 +46,32 @@
             "Successfully saved authorization token.\n"
           ]
         }
+      ],
+      "source": [
+        "ee.Authenticate()\n",
+        "ee.Initialize()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "countries = ee.FeatureCollection('USDOS/LSIB_SIMPLE/2017')\n",
-        "\n",
-        "Ethiopia = countries.filter(ee.Filter.eq('country_na', 'Egypt'))"
-      ],
+      "execution_count": 30,
       "metadata": {
         "id": "4b96uIoIQSYY"
       },
-      "execution_count": 30,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Load countries data\n",
+        "countries = ee.FeatureCollection('USDOS/LSIB_SIMPLE/2017')\n",
+        "Ethiopia = countries.filter(ee.Filter.eq('country_na', 'Egypt'))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "TgZRqTixKodi"
+      },
+      "outputs": [],
       "source": [
         "#MODIS image\n",
         "\n",
@@ -91,15 +80,15 @@
         "\n",
         "#Use the normalizedDifference function\n",
         "ndvi = img.normalizedDifference(['sur_refl_b02', 'sur_refl_b01'])"
-      ],
-      "metadata": {
-        "id": "TgZRqTixKodi"
-      },
-      "execution_count": 31,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "_6RgLG0NL9lV"
+      },
+      "outputs": [],
       "source": [
         "# Make a 'palette': a list of hex strings.\n",
         "palette = [\n",
@@ -123,46 +112,11 @@
         "    '011D01',\n",
         "    '011301'\n",
         "]"
-      ],
-      "metadata": {
-        "id": "_6RgLG0NL9lV"
-      },
-      "execution_count": 33,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "# Import the Folium library.\n",
-        "import folium\n",
-        "\n",
-        "# Define a method for displaying Earth Engine image tiles to folium map.\n",
-        "def add_ee_layer(self, ee_image_object, vis_params, name):\n",
-        "  map_id_dict = ee.Image(ee_image_object).getMapId(vis_params)\n",
-        "  folium.raster_layers.TileLayer(\n",
-        "    tiles = map_id_dict['tile_fetcher'].url_format,\n",
-        "    attr = 'Map Data &copy; <a href=\"https://earthengine.google.com/\">Google Earth Engine</a>',\n",
-        "    name = name,\n",
-        "    overlay = True,\n",
-        "    control = True\n",
-        "  ).add_to(self)\n",
-        "\n",
-        "# Add EE drawing method to folium.\n",
-        "folium.Map.add_ee_layer = add_ee_layer\n",
-        "\n",
-        "# Create a folium map object.\n",
-        "my_map = folium.Map(location=[30.033, 31.233], zoom_start=5)\n",
-        "\n",
-        "# Add the layer to the map object.\n",
-        "my_map.add_ee_layer(ndvi.clip(Ethiopia), {'min': 0, 'max': 1, 'palette': palette}, 'NDVI')\n",
-        "\n",
-        "# Add a layer control panel to the map.\n",
-        "my_map.add_child(folium.LayerControl())\n",
-        "\n",
-        "# Display the map.\n",
-        "display(my_map)"
-      ],
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -171,14 +125,9 @@
         "id": "ptTMDHN0Qb8J",
         "outputId": "f9f60293-9e0a-43c5-a643-2e6a3802947a"
       },
-      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<folium.folium.Map at 0x782b88d60f70>"
-            ],
             "text/html": [
               "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
               "&lt;html&gt;\n",
@@ -270,11 +219,62 @@
               "        \n",
               "&lt;/script&gt;\n",
               "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+            ],
+            "text/plain": [
+              "<folium.folium.Map at 0x782b88d60f70>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "\n",
+        "# Import the Folium library.\n",
+        "import folium\n",
+        "\n",
+        "# Define a method for displaying Earth Engine image tiles to folium map.\n",
+        "def add_ee_layer(self, ee_image_object, vis_params, name):\n",
+        "  map_id_dict = ee.Image(ee_image_object).getMapId(vis_params)\n",
+        "  folium.raster_layers.TileLayer(\n",
+        "    tiles = map_id_dict['tile_fetcher'].url_format,\n",
+        "    attr = 'Map Data &copy; <a href=\"https://earthengine.google.com/\">Google Earth Engine</a>',\n",
+        "    name = name,\n",
+        "    overlay = True,\n",
+        "    control = True\n",
+        "  ).add_to(self)\n",
+        "\n",
+        "# Add EE drawing method to folium.\n",
+        "folium.Map.add_ee_layer = add_ee_layer\n",
+        "\n",
+        "# Create a folium map object.\n",
+        "my_map = folium.Map(location=[30.033, 31.233], zoom_start=5)\n",
+        "\n",
+        "# Add the layer to the map object.\n",
+        "my_map.add_ee_layer(ndvi.clip(Ethiopia), {'min': 0, 'max': 1, 'palette': palette}, 'NDVI')\n",
+        "\n",
+        "# Add a layer control panel to the map.\n",
+        "my_map.add_child(folium.LayerControl())\n",
+        "\n",
+        "# Display the map.\n",
+        "display(my_map)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNV2KY+RCF8tcLGr6FZ+C4z",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
