Forest Cover Change Update

--- a/Brazil_Forest_Cover_Gain_and_Loss/Brazil_Forest_Cover_Gain_and_Loss.ipynb
+++ b/Brazil_Forest_Cover_Gain_and_Loss/Brazil_Forest_Cover_Gain_and_Loss.ipynb
@@ -1,15 +1,19 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/EltonWolf/GoogleEarthPythonBootcampAPI-/blob/main/Brazil_Forest_Cover_Gain_and_Loss.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
     },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -18,48 +22,42 @@
       },
       "outputs": [],
       "source": [
-        "# Import dependencies\n",
         "import ee"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "ee.Authenticate()\n",
+        "ee.Initialize()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xAF3EQjD30dU",
-        "outputId": "987977c6-6cb4-4d6f-a132-ca404d52ee59"
+        "outputId": "78765d4e-daed-4202-f994-6502a18c0489"
       },
+      "execution_count": 2,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
             "\n",
-            "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=XChRv-5x8ZhzVP2RPjzswIxCnZHefp8z5HiFvVWCMf0&tc=9dHbuZyCQbXO21E5jW_h4OJ-q9xnrFhg0_-yNiUFaUI&cc=0GH0d0_zkKswzBT5f6gLMpgp12d38c7_hJb-VYviXvA\n",
+            "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=efi6PgevKkheQOO8D8IKZtwY-pDu-Hn7ddyE4QeZs5s&tc=0q_9ny6OKRzlLclaeyZZIFPPtHdaLvf_tE_nIg-Am78&cc=ejubz13H7m_mfGqvvpUUoHUZD_C_SKEELiDTyTfbA9g\n",
             "\n",
             "The authorization workflow will generate a code, which you should paste in the box below.\n",
-            "Enter verification code: 4/1AfJohXm9dN5LAkOwQRf43Cp2NTUIiT182JCqgevGD1GZ_D7LoazKY6nvkY4\n",
+            "Enter verification code: 4/1AfJohXkdqeaOftFl0XwfINBLYfhCaTPrjLZ8EUN44woy8kepT7zM0RnT0T4\n",
             "\n",
             "Successfully saved authorization token.\n"
           ]
         }
-      ],
-      "source": [
-        "ee.Authenticate()\n",
-        "ee.Initialize()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "id": "d7BTUMUX5SOR"
-      },
-      "outputs": [],
       "source": [
         "#Gabon Forest Cover\n",
         "\n",
@@ -68,38 +66,38 @@
         "Brazil = countries.filter(ee.Filter.eq('country_na', 'Brazil'))\n",
         "\n",
         "tree_cover_2022 = ee.Image(\"UMD/hansen/global_forest_change_2022_v1_10\")"
-      ]
+      ],
+      "metadata": {
+        "id": "d7BTUMUX5SOR"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "id": "qZjfnqoe6ua5"
-      },
-      "outputs": [],
       "source": [
         "loss = tree_cover_2022.select(['loss'])\n",
         "gain = tree_cover_2022.select(['gain'])"
-      ]
+      ],
+      "metadata": {
+        "id": "qZjfnqoe6ua5"
+      },
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "source": [
+        "import folium"
+      ],
       "metadata": {
         "id": "oiQQd8jT5eHv"
       },
-      "outputs": [],
-      "source": [
-        "import folium"
-      ]
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {
-        "id": "7BbJFd-55f7p"
-      },
-      "outputs": [],
       "source": [
         "# Define a method for displaying Earth Engine image tiles to folium map.\n",
         "def add_ee_layer(self, ee_image_object, vis_params, name):\n",
@@ -114,22 +112,47 @@
         "\n",
         "# Add EE drawing method to folium.\n",
         "folium.Map.add_ee_layer = add_ee_layer"
-      ]
+      ],
+      "metadata": {
+        "id": "7BbJFd-55f7p"
+      },
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "source": [
+        "# Create a folium map object.\n",
+        "my_map = folium.Map(location=[-14.235, -51.9253], zoom_start = 5)\n",
+        "\n",
+        "# Add the layer to the map object.\n",
+        "my_map.add_ee_layer(gain.clip(Brazil).updateMask(gain),{'palette': ['blue']},'Brazil Forest Gain')\n",
+        "my_map.add_ee_layer(loss.clip(Brazil).updateMask(loss),{'palette': ['red']},'Brazil Forest Loss')\n",
+        "\n",
+        "my_map.add_ee_layer(ee.Image().paint(Brazil, 0, 1), {'palette': ['grey']}, 'Brazil')\n",
+        "\n",
+        "# Add a layer control panel to the map.\n",
+        "my_map.add_child(folium.LayerControl())\n",
+        "\n",
+        "# Display the map.\n",
+        "display(my_map)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 427
+          "height": 903
         },
         "id": "t5HUviVd5kyX",
-        "outputId": "3cc80645-ae14-44f6-fa24-60c460edb6e5"
+        "outputId": "6c10894c-03ee-4d6e-b605-0ea4d1ee4395"
       },
+      "execution_count": 7,
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<folium.folium.Map at 0x7b3bd3f022f0>"
+            ],
             "text/html": [
               "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
               "&lt;html&gt;\n",
@@ -158,7 +181,7 @@
               "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
               "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
               "            &lt;style&gt;\n",
-              "                #map_1bdd2f99a008c41c6bdd646fbb3a1a32 {\n",
+              "                #map_182e00030a59df1da857a4976e0b4e49 {\n",
               "                    position: relative;\n",
               "                    width: 100.0%;\n",
               "                    height: 100.0%;\n",
@@ -172,14 +195,14 @@
               "&lt;body&gt;\n",
               "    \n",
               "    \n",
-              "            &lt;div class=&quot;folium-map&quot; id=&quot;map_1bdd2f99a008c41c6bdd646fbb3a1a32&quot; &gt;&lt;/div&gt;\n",
+              "            &lt;div class=&quot;folium-map&quot; id=&quot;map_182e00030a59df1da857a4976e0b4e49&quot; &gt;&lt;/div&gt;\n",
               "        \n",
               "&lt;/body&gt;\n",
               "&lt;script&gt;\n",
               "    \n",
               "    \n",
-              "            var map_1bdd2f99a008c41c6bdd646fbb3a1a32 = L.map(\n",
-              "                &quot;map_1bdd2f99a008c41c6bdd646fbb3a1a32&quot;,\n",
+              "            var map_182e00030a59df1da857a4976e0b4e49 = L.map(\n",
+              "                &quot;map_182e00030a59df1da857a4976e0b4e49&quot;,\n",
               "                {\n",
               "                    center: [-14.235, -51.9253],\n",
               "                    crs: L.CRS.EPSG3857,\n",
@@ -193,100 +216,53 @@
               "\n",
               "        \n",
               "    \n",
-              "            var tile_layer_cfb95a9d66303b9a1aea49799b66ef27 = L.tileLayer(\n",
+              "            var tile_layer_38a2097786fe5968895c35328b8b5e5c = L.tileLayer(\n",
               "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
               "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-              "            ).addTo(map_1bdd2f99a008c41c6bdd646fbb3a1a32);\n",
+              "            ).addTo(map_182e00030a59df1da857a4976e0b4e49);\n",
               "        \n",
               "    \n",
-              "            var tile_layer_b5106ccd20a5e7218cc94a37ebf58773 = L.tileLayer(\n",
-              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/ade81da8711ebdc79da732600b316d25-cc7afd9c4bc2e2bef771ffcfa4b03df1/tiles/{z}/{x}/{y}&quot;,\n",
+              "            var tile_layer_72cf68b510c2adbbd897a27a52155102 = L.tileLayer(\n",
+              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/ade81da8711ebdc79da732600b316d25-c3352a16323b2fecd84f683f0385cea8/tiles/{z}/{x}/{y}&quot;,\n",
               "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-              "            ).addTo(map_1bdd2f99a008c41c6bdd646fbb3a1a32);\n",
+              "            ).addTo(map_182e00030a59df1da857a4976e0b4e49);\n",
               "        \n",
               "    \n",
-              "            var tile_layer_d41b4bd3ea12227e69e4721de600d190 = L.tileLayer(\n",
-              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/256e41ca03baab57bcb96cef9ffee188-368cd9e1193b67ca3aec38666309240e/tiles/{z}/{x}/{y}&quot;,\n",
+              "            var tile_layer_d6523dbfef71f6babd081c548d5e7621 = L.tileLayer(\n",
+              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/256e41ca03baab57bcb96cef9ffee188-cf08259f07d1dde66b82ca02d9fbd9a1/tiles/{z}/{x}/{y}&quot;,\n",
               "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-              "            ).addTo(map_1bdd2f99a008c41c6bdd646fbb3a1a32);\n",
+              "            ).addTo(map_182e00030a59df1da857a4976e0b4e49);\n",
               "        \n",
               "    \n",
-              "            var tile_layer_bbcec730319d118c6e31ade8f992b83b = L.tileLayer(\n",
-              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/d4d0ac5a1438562427e34c75aef4e936-04f8587191835ebd021c8315d4de7b9b/tiles/{z}/{x}/{y}&quot;,\n",
+              "            var tile_layer_467368bf5171db524b8c08cc705b0729 = L.tileLayer(\n",
+              "                &quot;https://earthengine.googleapis.com/v1/projects/earthengine-legacy/maps/d4d0ac5a1438562427e34c75aef4e936-f4958d0cfd6dc6e520611143d344f804/tiles/{z}/{x}/{y}&quot;,\n",
               "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-              "            ).addTo(map_1bdd2f99a008c41c6bdd646fbb3a1a32);\n",
+              "            ).addTo(map_182e00030a59df1da857a4976e0b4e49);\n",
               "        \n",
               "    \n",
-              "            var layer_control_7ecfe39e1cc5eb08875e20a913a7acae = {\n",
+              "            var layer_control_81b20c80e07c66de9d2548adc101bdb7 = {\n",
               "                base_layers : {\n",
-              "                    &quot;openstreetmap&quot; : tile_layer_cfb95a9d66303b9a1aea49799b66ef27,\n",
+              "                    &quot;openstreetmap&quot; : tile_layer_38a2097786fe5968895c35328b8b5e5c,\n",
               "                },\n",
               "                overlays :  {\n",
-              "                    &quot;Brazil Forest Gain&quot; : tile_layer_b5106ccd20a5e7218cc94a37ebf58773,\n",
-              "                    &quot;Brazil Forest Loss&quot; : tile_layer_d41b4bd3ea12227e69e4721de600d190,\n",
-              "                    &quot;Brazil&quot; : tile_layer_bbcec730319d118c6e31ade8f992b83b,\n",
+              "                    &quot;Brazil Forest Gain&quot; : tile_layer_72cf68b510c2adbbd897a27a52155102,\n",
+              "                    &quot;Brazil Forest Loss&quot; : tile_layer_d6523dbfef71f6babd081c548d5e7621,\n",
+              "                    &quot;Brazil&quot; : tile_layer_467368bf5171db524b8c08cc705b0729,\n",
               "                },\n",
               "            };\n",
               "            L.control.layers(\n",
-              "                layer_control_7ecfe39e1cc5eb08875e20a913a7acae.base_layers,\n",
-              "                layer_control_7ecfe39e1cc5eb08875e20a913a7acae.overlays,\n",
+              "                layer_control_81b20c80e07c66de9d2548adc101bdb7.base_layers,\n",
+              "                layer_control_81b20c80e07c66de9d2548adc101bdb7.overlays,\n",
               "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-              "            ).addTo(map_1bdd2f99a008c41c6bdd646fbb3a1a32);\n",
+              "            ).addTo(map_182e00030a59df1da857a4976e0b4e49);\n",
               "        \n",
               "&lt;/script&gt;\n",
               "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
-            ],
-            "text/plain": [
-              "<folium.folium.Map at 0x7bb4ba097ee0>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
-      ],
-      "source": [
-        "# Create a folium map object.\n",
-        "my_map = folium.Map(location=[-14.235, -51.9253], zoom_start = 5)\n",
-        "\n",
-        "# Add the layer to the map object.\n",
-        "my_map.add_ee_layer(gain.clip(Brazil).updateMask(gain),{'palette': ['blue']},'Brazil Forest Gain')\n",
-        "my_map.add_ee_layer(loss.clip(Brazil).updateMask(loss),{'palette': ['red']},'Brazil Forest Loss')\n",
-        "\n",
-        "my_map.add_ee_layer(ee.Image().paint(Brazil, 0, 1), {'palette': ['grey']}, 'Brazil')\n",
-        "\n",
-        "# Add a layer control panel to the map.\n",
-        "my_map.add_child(folium.LayerControl())\n",
-        "\n",
-        "# Display the map.\n",
-        "display(my_map)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "48A2Z3q65xB9"
-      },
-      "outputs": [],
-      "source": [
-        "type(my_map)"
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyMynjtMrUS4c5IvIyyy4vsO",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
